--- a/index.html
+++ b/index.html
@@ -3,78 +3,54 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>選擇結果</title>
-  <link href="/style.css" type="text/css" rel="stylesheet">
+  <meta name="description" property="og:description" content="「你能猜到他們耳機中播放的音樂是什麼嗎？」">
+  <title>poto</title>
+  <link href="/home.css" type="text/css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@350&family=Oswald:wght@300&display=swap" rel="stylesheet">
+  <link rel="icon" href="/img/fav/favicon.ico" sizes="any">
+  <link rel="icon" href="/img/fav/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="/img/fav/apple-touch-icon.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div id="p1">
-    <div class="head"></div>
-    <img src="/img/yabe-poster.webp">
-      <br>
-    <div id="b1">
-      <button id="b1a">蘇打綠《小情歌》</button>
-        <br>
-      <button id="b1b">Cavetown《Boys Will Be Bugs》</button>
-        <br>
-      <button id="b1c">Owalloil《Garden Balsam》</button>
-        <br>
-      <button id="b1d" style="display: none;">下一題</button>
+    <div class="head">
+      <a class="logoa" href="/index.html">
+        <img class="logol" src="/img/logol.webp">
+        <img class="logos" src="/img/logos.webp">
+      </a>
+      <div class="nav">
+        <a class="nava" href="/1.html">Yabe</a>
+        <a class="nava" href="/2.html">Gu</a>
+        <a class="nava" href="/3.html">Tasi</a>
+        <a class="nava" href="/4.html">Jono</a>
+      </div>
+      <div class="ham">
+        <label for="ham"><img class="ham0" src="/img/ham0.svg"></label>
+        <input type="checkbox" id="ham">
+        <div class="menu">
+          <ul>
+            <li><a href="/1.html">Yabe</a></li>
+            <li><a href="/2.html">Gu</a></li>
+            <li><a href="/3.html">Tasi</a></li>
+            <li><a href="/4.html">Jono</a></li>
+          </ul>
+        </div>
+      </div>
     </div>
-    <div class="foot" id="foot1"></div>
-  </div>
-
-  <div id="p2" style="display: none;">
-    <div class="head"></div>
-    <img src="/img/yabe-poster.webp">
-      <br>
-    <div id="b2">
-      <button id="b2a">DIZLIKE《Stand Up！Stand Up！》</button>
-        <br>
-      <button id="b2b">Soulfa《Slumber Day》</button>
-        <br>
-      <button id="b2c">康姆士《我不希望你孤單的去面對整個喧囂世界》</button>
-        <br>
-      <button id="b2d" style="display: none;">下一題</button>
+    <div class="img4">
+        <a href="/1.html"><img src="/img/h1.webp"></a>
+        <a href="/2.html"><img src="/img/h2.webp"></a>
+        <a href="/3.html"><img src="/img/h3.webp"></a>
+        <a href="/4.html"><img src="/img/h1.webp"></a>
     </div>
-    <div class="foot" id="foot2"></div>
-  </div>
-
-  <div id="p3" style="display: none;">
-    <div class="head"></div>
-    <img src="/img/yabe-poster.webp">
-      <br>
-    <div id="b3">
-      <button id="b3a">HONNE, BEKA《Location Unknown ◐》</button>
-        <br>
-      <button id="b3b">Kim Seungmin《Outside your house》</button>
-        <br>
-      <button id="b3c">淺堤《恆春花絮》</button>
-        <br>
-      <button id="b3d" style="display: none;">他的歌單</button>
+    <div class="slogan">
+        <h1>「你能猜到他們耳機中播放的音樂是什麼嗎？」</h1>
+        <h2>一百種人，有一百種聽歌習性。猜測別人喜歡什麼音樂，十分有趣。</h2>
+        <h2>猜對的欣喜，猜錯的驚喜。無關品味高低，都將呈現給你。</h2>
     </div>  
-    <div class="foot" id="foot3"></div>  
-  </div>
-
-  <div id="p4" style="display: none;">
-    <div class="head"></div>
-    <img src="/img/yabe.webp">
-    <br>
-    <button id="b4">你的答案</button>
-    <div class="foot" id="foot4"></div>
-  </div>
-
-  <div id="p5" style="display: none;">
-    <div class="head"></div>
-    <div id="result"></div>
-    <button id="down">下載</button>
-    <button id="home">回首頁</button>
-    <button id="re">再玩一次</button>
-    <div class="foot" id="foot5"></div>
-  </div>
-
-  <script src="script.js"></script>
+    <div class="foot"><h2 class="copy">Copyright © Playlists Of The Outfits. All Rights Reserved.</h2></div>
+  <!-- <script src="script.js"></script> -->
 </body>
 </html>
